@@ -16,7 +16,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -62,7 +61,7 @@ public class Reaper implements Closeable {
 
     private void reap() {
         try (Stream<Path> stream = Files.list(inputDir)) {
-            final List<Path> inputFiles = stream.filter(p -> p.getFileName().toString().endsWith(".cmd")).collect(Collectors.toList());
+            final List<Path> inputFiles = stream.filter(p -> p.getFileName().toString().endsWith(".cmd")).toList();
 
             for (Path inputFile : inputFiles) {
                 System.out.println("Process file: " + inputFile);
